--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -23,7 +23,7 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_WEBAPP_NAME: index.js    # set this to your application's name
+  AZURE_WEBAPP_NAME: 'index.js'    # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: 'package.json'      # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: 'v18.17.1'                # set this to the node version to use
 
